--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,8 @@ jobs:
         with:
           fetch-depth: 0
       - uses: pnpm/action-setup@v2
+        with:
+          version: 6.32.9
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
