--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy @johnny/document homepage
 
 on:
   push:
-    branches: [feature/vitepress]
+    branches: [main]
 
 permissions:
   contents: read
@@ -27,7 +27,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 20
           cache: pnpm
       - name: Setup Pages
         uses: actions/configure-pages@v3
